--- a/16_Note_App/stylep.css
+++ b/16_Note_App/stylep.css
@@ -72,7 +72,7 @@ h1 {
 }
 
 .note-item {
-  background:yellow;
+  background:whitesmoke;
   padding: 15px;
   border-radius: 10px;
   margin-bottom: 12px;
